# FusionMind-4-CausalPlasma

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESULTS.md  VERIFICATION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_100seg.py  benchmark_1126shots.json  benchmark_16ch_multiscale.json  benchmark_2259shots.json  benchmark_565shots.json  benchmark_777shots.json  benchmark_comprehensive.json  benchmark_v3_16ch_final.json  benchmark_v3_16channel.json  benchmark_v3_2521shots.json  benchmark_v3_2584shots.json  benchmark_v3_27k_78f.json  benchmark_v3_78feat.json  benchmark_v3_final_16ch.json  benchmark_v3_ops_labels.json  benchmark_v3_pershot.json  benchmark_v3_predictable_only.json  benchmark_v3_proper_labels.json  benchmark_v4_2941_78feat.json  benchmark_v4_tuned.json  best_model_mast.json  best_model_mast_v2.json  bootstrap_ci.json  cmod_disruptionbench.json  cmod_disruptionbench_official.json  cmod_disruptionbench_verified.json  cmod_honest_assessment.json  competition_results.json  cross_device_benchmark.json  device_adaptive.json  disruptionbench_Ensemblegeo.json  disruptionbench_Super-GRU.json  disruptionbench_v3.2.json  disruptionbench_v3.2_final.json  disruptionbench_v3_16ch.json  enhanced_benchmark.json  enhanced_benchmark.py  expanded_512shots_3seed.json  fast_diag_warning.json  final_229shots_4seed.json  (+49 more)
dashboards/: CPDE_v3_2_Results.jsx  FM4_CausalCopilot.jsx  FM4_CausalShieldRL_Dashboard.jsx  FM4_Competitive_Analysis.jsx  FM4_Investor_Dashboard.jsx
data/: README.md
data/cmod/: disruption_info.json
data/mast/: disruption_info.json  labels_565shots.json  mast_1126_labels.json  mast_1179_labels.json  mast_13var.npz  mast_1575_labels.json  mast_1753_labels.json  mast_2259_labels.json  mast_2405_labels.json  mast_2521_labels.json  mast_2636_labels.json  mast_2731_labels.json  (+15 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  CAUSALSHIELD_RL.md  CAUSAL_COPILOT.md  COMMERCIALIZATION.md  CPDE_PIPELINE.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  FUNCTIONAL_ARCHITECTURE.md  FusionMind_Paper.docx  GETTING_STARTED.md  REAL_DATA_VALIDATION.md  STACK_ENGINE.md
examples/: quickstart.py
fusionmind4/: __init__.py
scripts/: benchmark_cpp.py  download_fixtures.py  download_mast_level2.py  predict.py  predict_production.py  reproduce_all_results.py  run_fair_mast.py  run_full_validation.py  run_large_scale_mast.py  run_pipeline_legacy.py  run_real_data.py  train_causal_rl.py
tests/: test_causal_controller.py  test_causal_kernels.py  test_copilot.py  test_cpde.py  test_cpp_engine.py  test_integration.py  test_learning.py  test_mlx_backend.py  test_overseer.py  test_real_data.py  test_realtime.py  test_stack.py  test_upgrades.py  test_v43_upgrades.py
(+82 files in other folders)
