[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionmind4"
version = "4.0.0"
description = "Causal AI for Fusion Plasma Control"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [{name = "Dr. Mladen Mester"}]
keywords = ["fusion", "plasma", "causal-inference", "tokamak", "do-calculus"]
dependencies = ["numpy>=1.24", "scipy>=1.11"]

[project.optional-dependencies]
full = ["torch>=2.0", "scikit-learn>=1.3", "matplotlib>=3.7", "h5py>=3.9", "tqdm>=4.65"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fusionmind4*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
