[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionmind4"
version = "4.7.1"
description = "Causal AI for Fusion Plasma Control — Pearl's do-calculus applied to tokamak physics"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [{name = "Dr. Mladen Mešter, dr.med.", email = "mladen@nexellum.com"}]
keywords = [
    "fusion", "plasma", "causal-inference", "tokamak", "do-calculus",
    "structural-causal-model", "reinforcement-learning", "pearl",
    "counterfactual", "physics-informed"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "networkx>=3.0",
]

[project.optional-dependencies]
full = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "tqdm>=4.65",
]
real-data = [
    "s3fs>=2023.6",
    "zarr>=2.16",
    "requests>=2.31",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/mladen1312/FusionMind-4-CausalPlasma"
Repository = "https://github.com/mladen1312/FusionMind-4-CausalPlasma"
Issues = "https://github.com/mladen1312/FusionMind-4-CausalPlasma/issues"
Changelog = "https://github.com/mladen1312/FusionMind-4-CausalPlasma/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["fusionmind4*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
